# yafrserver

./: Dockerfile  Makefile  Makefile.docker  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  yafrreader.py  yafrserver.py
rsshistory/: configuration.py  status.py  threadprocessors.py
rsshistory/webtools/: feedclient.py  remoteserver.py
static/: entries_library.js  library.js  listview.js  project_library.js  sources_library.js
static/templates/: admin_page.html  base_footer.html  base_head.html  base_menu.html  base_script.js  entry_detail.html  entry_detail__script.js  entry_list.html  entry_list__script.js  javascript_list_utilities.js  page_show_props.html  page_show_props__script.js  source_detail.html  source_list.html  source_list__script.js  userbrowsehistory_list.html  userbrowsehistory_list__script.js  usersearchhistory_list.html  usersearchhistory_list__script.js
tests/: test_alchemysearch.py  test_sqlmodel.py
utils/: alchemysearch.py  sqlmodel.py
utils/controllers/: __init__.py  entries.py  sources.py  system.py
views/: browsers.py  entries.py  searchviews.py  sources.py  system.py  tools.py  userhistory.py  views.py
