[tool.poetry]
name = "linklibrary"
version = "0.10.4"
description = "Link Archive"
authors = ["Iwan Grozny <renegat@renegat0x0.ddns.net>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.38"
sympy = "^1.14.0"
python-dateutil = "^2.8.2"
requests = "^2.32.3"
flask = "^3.1.1"
beautifulsoup4 = "^4.13.3"
brutefeedparser="*"
psutil="*"
waybackpy = "^3.0.6"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
py-spy = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
